kubernetes/infrastructure/configs/flux-system/http-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.mcf.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-receiver
spec:
  parentRefs:
    - name: istio-ingressgateway
      namespace: istio-ingress
      sectionName: https-external
  hostnames:
    - flux-webhook.mcf.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook/
      backendRefs:
        - name: webhook-receiver
          port: 80
